test/inference/bad/typeclass_multiple_definitions.mlt
class H 'a { h : 'a -> int }
class H 'a { h : 'a -> int }
let main = 0
